updating spacing issue

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -59,7 +59,11 @@ header{
                     margin-right: 3px;
                     font-size: 1.05rem;
                 }
+                .pages {
+                    padding-left:20px;
+                }
             }
+
             .social{
                 display: block;
                 float: right;
